Undo/redo ignore mesh changes when using Sculpt Paint tools with Gravity option #99100

Closed
opened 2022-06-23 04:21:16 +02:00 by Sun Kim · 5 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005

Blender Version
Broken: version: 3.3.0 Alpha, branch: arcpatch-D15122, commit date: 2022-06-22 18:48, hash: 92b84dd1c4
Worked: n/a

Short description of error
If you use Sculpt Paint tools (Paint, Smear) with Gravity option enabled, undo/redo only count Paint changes and ignore mesh changes. Mesh changes are reverted all together when you undo enough to quit Sculpt mode. Redo from that point doesn't bring back mesh changes.

Exact steps for others to reproduce the error

  • Have a dense enough mesh to sculpt
  • Go to Sculpt mode and select Paint or Smear tool
  • Go to tool options and activate Gravity option
  • Stroke few times
  • Undo and redo the strokes
    paint_with_gravity_bug.mp4
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.14800 Core Profile Context 22.5.1 30.0.15021.11005 **Blender Version** Broken: version: 3.3.0 Alpha, branch: arcpatch-[D15122](https://archive.blender.org/developer/D15122), commit date: 2022-06-22 18:48, hash: `92b84dd1c4` Worked: n/a **Short description of error** If you use Sculpt Paint tools (Paint, Smear) with Gravity option enabled, undo/redo only count Paint changes and ignore mesh changes. Mesh changes are reverted all together when you undo enough to quit Sculpt mode. Redo from that point doesn't bring back mesh changes. **Exact steps for others to reproduce the error** * Have a dense enough mesh to sculpt * Go to Sculpt mode and select Paint or Smear tool * Go to tool options and activate Gravity option * Stroke few times * Undo and redo the strokes [paint_with_gravity_bug.mp4](https://archive.blender.org/developer/F13219275/paint_with_gravity_bug.mp4)
Author
Contributor

Added subscriber: @persun

Added subscriber: @persun
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 4c3b984b3d

This issue was referenced by 4c3b984b3daa58e25e77864fc430917d4448ce71
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-06-27 01:16:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99100
No description provided.