Fix T99100: Undo/redo bugs with paint and gravity

You can now push multiple sculpt undo nodes
of different types.  This is necassary to handle
paint tools that have gravity enabled.