source/blender/editors/sculpt_paint/sculpt_paint_color.c
@@ -111,7 +111,7 @@ static void do_paint_brush_task_cb_ex(void *__restrict userdata,
   PBVHColorBufferNode *color_buffer;
 
   SculptOrigVertData orig_data;
-  SCULPT_orig_vert_data_init(&orig_data, data->ob, data->nodes[n]);
+  SCULPT_orig_vert_data_init(&orig_data, data->ob, data->nodes[n], SCULPT_UNDO_COLOR);
 
   color_buffer = BKE_pbvh_node_color_buffer_get(data->nodes[n]);
 
